fix grid blowout on small sizes

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -228,27 +228,24 @@ h6 {
 
 .el-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 1rem;
-}
-
-.el-grid--2-cols,
-.el-grid--1\/2-1\/2 {
-  grid-template-columns: repeat(2, minmax(300px, 1fr));
-}
-
-.el-grid--2\/3-1\/3 {
   grid-template-columns: 1fr;
 }
 
 @media (min-width: 480px) {
-  .el-grid--2\/3-1\/3 {
-    grid-template-columns: 2fr 1fr;
+  .el-grid--2-cols,
+  .el-grid--1\/2-1\/2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-}
-
-.el-grid--3-cols {
-  grid-template-columns: repeat(3, minmax(300px, 1fr));
+  .el-grid--3-cols {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .el-grid--2\/3-1\/3 {
+    grid-template-columns: minmax(0, 2fr) minmax(0, 1fr);
+  }
+  .el-grid--1\/3-2\/3 {
+    grid-template-columns: minmax(0, 1fr) minmax(0, 2fr);
+  }
 }
 
 /** END CLASSES THAT CAN BE USED ON STATIC PAGES **/
